# CPPCourseEGT

BankSystem/: Task-Discription.h
C++ Coding Tasks Exam/: Questions on C++ # 1.txt
Cars System/: TaskDescription.h
Cinema/: TaskDescriotion.h
CodingTasks_Classes_Homework/: Book.cpp  Book.h  CMakeLists.txt  TaskDescription.txt  main.cpp
CodingTasks_Inheritance_Homework/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  TaskDescription.txt  main.cpp
CodingTasks_Polymoprhism_Homework/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  TaskDescription.txt  main.cpp
Footbool Federation/: TaskDescription.h
Library Managment System_Homework/: Book.cpp  Book.h
Library_Homework/: TaskDescriotion.h
OddEven_Homework/: TaskDescription.h
OnlineShop/: TaskDescription.h
OperatorOverload_Homework/: Box.cpp  Box.h  Date.cpp  Date.h  TaskDescription.h  main.cpp
SDLProject -Render_Personal_Exercise/: RenderSDl.sln  main.cpp
SDLProject_Personal_Exercise/: SDLProject.sln
SDL_Image_4Pic_OnScreen_Homework/: Game.cpp  Game.h  TaskDescription.txt  TextureManager.cpp  TextureManager.h  mian.cpp
SDL_Image_Lecture/: Game.cpp  Game.h  Shape.cpp  Shapes.h  main.cpp
SDL_Image_Load&MoveImage_Homework/: Game.cpp  Game.h  TaskDescription.txt  TextureManager.h  main.cpp
SDL_Image_Personal_Exercise/: Game.cpp  Game.h  Spirte.cpp  Sprite.h  main.cpp
SDL_Mixer_Lecture/: Game.cpp  Game.h  SoundManager.cpp  SoundManager.h  main.cpp
Writing_JSON_Files_Homework/: CMakeLists.txt  jsonData.json  main.cpp
(+29 files in other folders)
